# ShowerPy

./: .gitignore  BUILD_README.md  Makefile  pyproject.toml  setup.py
src/ShowerPy.egg-info/: PKG-INFO  SOURCES.txt
src/showerpy/: gaugetheoryshower.py  parton.py  qcd_utils.py  shower_algorithm.py  vector_utils.py
tests/: Makefile  test_gaugetheoryshower.py  test_parton.py  test_qcd_utils.py  test_shower_algorithm.py  test_vector_utils.py
