[project]
name = "ShowerPy"
version = "0.0.1"
authors = [
  { name="Samuel Alipour-fard", email="samuelaf@mit.edu" },
]
description = "A python library for parton showering."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/samcaf/ShowerPy"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
